Migrated core module to work with Tide instead of Cairngorm
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@874 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -29,32 +29,32 @@
 
 	<granite:SecureRemoteObject
         id="locationService"
-        destination="locationService"
+        destination="locationServiceRemote"
         showBusyCursor="true" />
 
 	<granite:SecureRemoteObject
         id="locationGroupService"
-        destination="locationGroupService"
+        destination="locationGroupServiceRemote"
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
         id="transportUnitService"
-        destination="transportUnitService"
+        destination="transportUnitServiceRemote"
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
         id="transportService"
-        destination="transportService"
+        destination="transportServiceRemote"
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
         id="moduleManagementService"
-        destination="moduleManagementService2"
+        destination="moduleManagementServiceRemote"
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
         id="userService"
-        destination="userService2"
+        destination="userServiceRemote"
         showBusyCursor="true"/>
 
 <!--
