--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
@@ -21,7 +21,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="66" backgroundImage="@Embed(source='assets/images/openwms_banner.jpg')" backgroundSize="100%">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="66" backgroundImage="@Embed(source='assets/images/openwms_banner.jpg')" backgroundSize="100%" implements="org.openwms.web.flex.client.ISecured">
 
     <mx:Metadata>
         [Name]
@@ -30,8 +30,11 @@
 
     <mx:Script>
     	<![CDATA[
+    		import org.openwms.web.flex.client.model.ModelLocator;
+    		import mx.collections.ArrayCollection;
     		import org.openwms.web.flex.client.event.ApplicationEvent;
             import org.granite.tide.spring.Identity;
+            import org.openwms.web.flex.client.ISecured;
 
             [In]
             [Bindable]
@@ -42,16 +45,23 @@
     			var e:ApplicationEvent = new ApplicationEvent(ApplicationEvent.LOGOUT);
     			dispatchEvent(e);
     		}
+    		
+    		public function getSecuredObjectNames():ArrayCollection
+    		{
+    			var securedObjects:ArrayCollection = new ArrayCollection();
+    			//FIX securedObjects.addItem(loggedInUserBox.id, logoutBox.id);
+    			return securedObjects;
+    		}
     	]]>
     </mx:Script>
     <mx:HBox width="100%" height="66" horizontalAlign="left">
         <mx:Image height="100%" source="@Embed('assets/images/openwms_header.png')" />
         <mx:VBox height="100%" width="100%" horizontalAlign="right" verticalAlign="bottom">
-            <mx:HBox width="100%" horizontalAlign="right">
+            <mx:HBox id="loggedInUserBox" width="100%" horizontalAlign="right">
                 <mx:LinkButton label="{identity.username}" color="#E9EBEB" cornerRadius="4"/>
                 <mx:Image width="16" source="@Embed('assets/images/icons/user--anonymous.png')"/>
             </mx:HBox>
-            <mx:HBox width="100%" horizontalAlign="right">
+            <mx:HBox id="logoutBox" width="100%" horizontalAlign="right">
                 <mx:LinkButton label="logout" color="#E9EBEB" click="logout();"/>
                 <mx:Image width="16" source="@Embed('assets/images/icons/logout.png')"/>
             </mx:HBox>
