--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -22,6 +22,11 @@
  */
 -->
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#C2DAEF" show="init()">
+
+    <mx:Metadata>
+        [Name]
+    </mx:Metadata>
+
     <mx:Script>
         <![CDATA[
         	import mx.events.ValidationResultEvent;
@@ -40,10 +45,12 @@
             import org.openwms.web.flex.client.common.event.LoadLocationGroupsEvent;
             import mx.events.ListEvent;
             import org.openwms.web.flex.client.model.ModelLocator;
+            [In]
             [Bindable]
-            private var modelLocator:ModelLocator=ModelLocator.getInstance();
+            public var modelLocator:ModelLocator;
+            [In]
             [Bindable]
-            private var commonModelLocator:CommonModelLocator=CommonModelLocator.getInstance();
+            public var commonModelLocator:CommonModelLocator;
             [Bindable]
             private var selected:Location;
             [Bindable]
@@ -54,11 +61,11 @@
                 new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS).dispatch();
                 if (commonModelLocator.allLocationTypes.length == 0)
                 {
-                	new LocationTypeEvent(LocationTypeEvent.LOAD_ALL_LOCATION_TYPES).dispatch();
+                	dispatchEvent(new LocationTypeEvent(LocationTypeEvent.LOAD_ALL_LOCATION_TYPES));
                 }
                 if (modelLocator.allLocationGroups.length == 0)
                 {
-                	new LoadLocationGroupsEvent(LoadLocationGroupsEvent.LOAD_ALL_LOCATION_GROUPS).dispatch();
+                	dispatchEvent(new LoadLocationGroupsEvent(LoadLocationGroupsEvent.LOAD_ALL_LOCATION_GROUPS));
                 }
             }
 
